--- a/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
@@ -14,6 +14,17 @@ title: Release Notes for AVD 4.x.x
 
 <!-- Release notes generated using configuration in .github/release.yml at devel -->
 
+## Release 4.7.1
+
+### Other Fixed issues
+
+- Fix(dhcp_provisioner): Support custom `node_type_keys` as a list of dicts. (#3813) by @carlbuchmann in https://github.com/aristanetworks/avd/pull/3842
+- Fix(plugins): Handle md-toc v9 (#3837) by @carlbuchmann in https://github.com/aristanetworks/avd/pull/3845
+
+### PyAVD Changes
+
+- Fix(pyavd): Remove accidental requirement for PyYAML (#3838) by @carlbuchmann in https://github.com/aristanetworks/avd/pull/3844
+
 ## Release 4.7.0
 
 ### Fixed issues in eos_cli_config_gen
