--- a/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
@@ -14,11 +14,12 @@ title: Release Notes for AVD 4.x.x
 
 <!-- Release notes generated using configuration in .github/release.yml at devel -->
 
-## Release 4.8.0
+## Release 4.x.x <!-- placeholder update when ready to be merged! -->
 
 ### Changes to requirements
 
-- AVD now requires a newer minimum version of `ansible-core` version 2.15
+- AVD now requires a newer minimum and maximum version of the Python package `ansible-core>=2.15.0,<2.18.0`.<br>
+- The latest version can be installed with `pip install "ansible-core>=2.15.0" --upgrade`.
 - AVD now requires a newer minimum but no maximum version of the Python package `jsonschema>=4.10.3`.<br>
   The latest version can be installed with `pip install "jsonschema>=4.10.3" --upgrade`.
 - AVD has a new requirement of the Python package `referencing>=0.35.0`.<br>
