Refactor(plugins): Remove limit on jsonschema version

--- a/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
@@ -14,6 +14,15 @@ title: Release Notes for AVD 4.x.x
 
 <!-- Release notes generated using configuration in .github/release.yml at devel -->
 
+## Release 4.8.0
+
+### Changes to requirements
+
+- AVD no longer requires an upper bound on the version of the Python package `jsonschema>=4.5.1`.<br>
+  The latest version can be installed with `pip install "jsonschema>=4.5.1" --upgrade`.
+- AVD has a new requirement of the Python package `referencing>=0.35.0`.<br>
+  The latest version can be installed with `pip install "referencing>=0.35.0" --upgrade`.
+
 ## Release 4.7.1
 
 ### Other Fixed issues
