--- a/ansible_collections/arista/avd/examples/isis-ldp-ipvpn/documentation/devices/p1.md
+++ b/ansible_collections/arista/avd/examples/isis-ldp-ipvpn/documentation/devices/p1.md
@@ -174,12 +174,12 @@ vlan internal order ascending range 1006 1199
 
 ##### ISIS
 
-| Interface | Channel Group | ISIS Instance | ISIS Metric | Mode | ISIS Circuit Type | Hello Padding | Authentication Mode |
-| --------- | ------------- | ------------- | ----------- | ---- | ----------------- | ------------- | ------------------- |
-| Ethernet1 | - | CORE | 50 | point-to-point | level-2 | True | md5 |
-| Ethernet2 | - | CORE | 50 | point-to-point | level-2 | True | md5 |
-| Ethernet3 | - | CORE | 50 | point-to-point | level-2 | True | md5 |
-| Ethernet4 | - | CORE | 50 | point-to-point | level-2 | True | md5 |
+| Interface | Channel Group | ISIS Instance | ISIS BFD | ISIS Metric | Mode | ISIS Circuit Type | Hello Padding | Authentication Mode |
+| --------- | ------------- | ------------- | -------- | ----------- | ---- | ----------------- | ------------- | ------------------- |
+| Ethernet1 | - | CORE | - | 50 | point-to-point | level-2 | True | md5 |
+| Ethernet2 | - | CORE | - | 50 | point-to-point | level-2 | True | md5 |
+| Ethernet3 | - | CORE | - | 50 | point-to-point | level-2 | True | md5 |
+| Ethernet4 | - | CORE | - | 50 | point-to-point | level-2 | True | md5 |
 
 #### Ethernet Interfaces Device Configuration
 
