Remove mdtoc from requirements

--- a/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
@@ -22,8 +22,7 @@ title: Release Notes for AVD 4.x.x
   The latest version can be installed with `pip install "jsonschema>=4.10.3" --upgrade`.
 - AVD has a new requirement of the Python package `referencing>=0.35.0`.<br>
   The latest version can be installed with `pip install "referencing>=0.35.0" --upgrade`.
-- AVD now requires a newer minimum version of the Python package `md-toc>=8.1.0`.<br>
-  The latest version can be installed with `pip install "md-toc>=8.1.0"--upgrade`.
+- AVD no longer requires the Python package `md-toc`.
 
 ## Release 4.7.1
 
