--- a/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
@@ -14,7 +14,7 @@ title: Release Notes for AVD 4.x.x
 
 <!-- Release notes generated using configuration in .github/release.yml at devel -->
 
-## Release 4.x.x <!-- placeholder update when ready to be merged! -->
+## Release 4.8.0
 
 ### Changes to requirements
 
