--- a/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
@@ -18,6 +18,8 @@ title: Release Notes for AVD 4.x.x
 
 ### Changes to requirements
 
+- AVD now requires a newer minimum and maximum version of the Python package `ansible-core>=2.15.0,<2.18.0`.<br>
+- The latest version can be installed with `pip install "ansible-core>=2.15.0" --upgrade`.
 - AVD now requires a newer minimum but no maximum version of the Python package `jsonschema>=4.10.3`.<br>
   The latest version can be installed with `pip install "jsonschema>=4.10.3" --upgrade`.
 - AVD has a new requirement of the Python package `referencing>=0.35.0`.<br>
