Apply suggestions from code review
Co-authored-by: Claus Holbech <holbech@arista.com>

--- a/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
@@ -24,9 +24,9 @@ Breaking changes may require modifications to the inventory or playbook.
 The eBGP LAN feature for WAN routers introduced in AVD 4.7.0 is not working for connected and static redistributed routes inside a VRF (outside of the VRF default) as the RM-BGP-UNDERLAY-PEERS-OUT outbound route-map would not match these routes.
 Similarly the routes coming from an eBGP peering in any VRF (including default) would be blocked out by the route-map.
 
-For all these reasons, the route-map is being removed.
+For these reasons, the route-map was removed as a bug fix.
 
-To keep the broken route-map, structured_configuration can be used.
+To keep the broken route-map, `structured_config` can be used.
 
 ## Release 4.8.0
 
