--- a/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
@@ -28,6 +28,11 @@ For these reasons, the route-map was removed as a bug fix.
 
 To keep the broken route-map, `structured_config` can be used.
 
+### Deprecations
+
+- Starting AVD 5.0.0, `eos_validate_state` will use ANTA as backend, which will change the default behavior (same as setting `use_anta: true` in older versions).
+  Please review the changes described on the  [ANTA integration page](./anta_integration.md)
+
 ## Release 4.8.0
 
 ### Changes to requirements
