Address review comments

--- a/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
@@ -30,7 +30,7 @@ To keep the broken route-map, `structured_config` can be used.
 
 ### Changes to requirements
 
-- The Ansible collection `arista.avd.` now only requires `pyavd[ansible]` which will install all other Python dependencies.<br>
+- The Ansible collection `arista.avd` now only requires `pyavd[ansible]` which will install all other Python dependencies.<br>
   Note that the version of `pyavd` **must** match the version of the `arista.avd` collection.
 
 ### Deprecations
