--- a/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
@@ -35,6 +35,9 @@ To keep the broken route-map, `structured_config` can be used.
 
 ### Deprecations
 
+- AVD version 5.0.0 will drop support for Python version 3.9. The decision has been taken to remove Python version 3.9 support in AVD collection to anticipate its removal in `ansible-core`.
+  `ansible-core` version 2.15 End-Of-Life is scheduled for November 2024 and it will be the last `ansible-core` version supporting Python version 3.9 as documented here: https://docs.ansible.com/ansible/latest/reference_appendices/release_and_maintenance.html#ansible-core-support-matrix.
+
 - The following Ansible plugins are no longer being used by AVD and have been deprecated for removal in AVD 5.0.0. See the plugin docs for possible replacements.
 
   Filters:
