--- a/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
@@ -12,7 +12,12 @@ title: Release Notes for AVD 4.x.x
 
 - Documentation for AVD version `4.x.x` [available here](https://www.avd.sh/en/stable/)
 
-<!-- Release notes generated using configuration in .github/release.yml at devel -->
+## Release 4.10.0
+
+### Deprecations
+
+- In AVD version 5.0.0, the `eos_designs.jsonschema.json` and `eos_cli_config_gen.jsonschema.json` will no longer be generated. These schemas are not being used and have never been complete.
+
 ## Release 4.9.0
 
 ### Breaking or behavioral changes in eos_designs
@@ -41,8 +46,6 @@ Pull request:
 
 - AVD version 5.0.0 will drop support for Python version 3.9. The decision has been taken to remove Python version 3.9 support in AVD collection to anticipate its removal in `ansible-core`.
   `ansible-core` version 2.15 End-Of-Life is scheduled for November 2024 and it will be the last `ansible-core` version supporting Python version 3.9 as documented here: https://docs.ansible.com/ansible/latest/reference_appendices/release_and_maintenance.html#ansible-core-support-matrix.
-
-- In AVD version 5.0.0, the `eos_designs.jsonschema.json` and `eos_cli_config_gen.jsonschema.json` will not be generated anymore. These schemas are not being used and have never been complete.
 
 - The following Ansible plugins are no longer being used by AVD and have been deprecated for removal in AVD 5.0.0. See the plugin docs for possible replacements.
 
