--- a/ansible_collections/arista/avd/examples/isis-ldp-ipvpn/documentation/devices/p3.md
+++ b/ansible_collections/arista/avd/examples/isis-ldp-ipvpn/documentation/devices/p3.md
@@ -380,6 +380,8 @@ router isis CORE
 | LDP Router ID | 10.255.0.3 |
 | LDP Interface Disabled Default | True |
 | LDP Transport-Address Interface | Loopback0 |
+| ICMP Fragmentation-Needed Tunneling Enabled | - |
+| ICMP TTL-Exceeded Tunneling Enabled | - |
 
 #### MPLS and LDP Device Configuration
 
