Doc: Deprecate the eos_designs and eos_cli_config_gen jsonschema.json… (#4195)

--- a/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
@@ -12,7 +12,12 @@ title: Release Notes for AVD 4.x.x
 
 - Documentation for AVD version `4.x.x` [available here](https://www.avd.sh/en/stable/)
 
-<!-- Release notes generated using configuration in .github/release.yml at devel -->
+## Release 4.10.0
+
+### Deprecations
+
+- In AVD version 5.0.0, the `eos_designs.jsonschema.json` and `eos_cli_config_gen.jsonschema.json` will no longer be generated. These schemas are not being used and have never been complete.
+
 ## Release 4.9.0
 
 ### Breaking or behavioral changes in eos_designs
