Refactor(eos_validate_state): Add warning for ansible test mode (#4173)
Co-authored-by: Claus Holbech <holbech@arista.com>

--- a/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
@@ -61,6 +61,9 @@ Pull request:
   - `arista.avd.validate_and_template`
   - `arista.avd.yaml_templates_to_facts`
 
+- Starting AVD 5.0.0, `eos_validate_state` will use ANTA as backend, which will change the default behavior (same as setting `use_anta: true` in older versions).
+  Please review the changes described on the ANTA integration page.
+
 ### Fixed issues in eos_cli_config_gen
 
 - Fix(eos_cli_config_gen): Fix the templates for event-handlers by @Shivani-gslab in https://github.com/aristanetworks/avd/pull/4055
