Refactor(eos_designs, eos_cli_config_gen): Deprecate type conversion from dict-of-dicts to list-of-dicts

--- a/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
@@ -978,7 +978,7 @@ to:
 
 ```yaml
 ethernet_interfaces:
-  - name: Ethernet1:   # <-- "name" here is called the "primary_key" which must have a unique value across all list elements
+  - name: Ethernet1   # <-- "name" here is called the "primary_key" which must have a unique value across all list elements
     <...>
 ```
 
