--- a/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
@@ -10,15 +10,14 @@ title: Release Notes for AVD 4.x.x
 
 # Release Notes for AVD 4.x.x
 
-- Documentation for AVD version `4.x.x` [available here](https://www.avd.sh/en/stable/)
+- Documentation for AVD version `4.x.x` [available here](https://avd.arista.com/stable/)
 
 ## Release 4.10.0
 
 ### Deprecations
 
 - In AVD version 5.0.0, the `eos_designs.jsonschema.json` and `eos_cli_config_gen.jsonschema.json` will no longer be generated. These schemas are not being used and have never been complete.
-- In AVD 4.0.0 and across both `eos_designs` and `eos_cli_config_gen`, *all* "dict-of-dicts" data models with user-defined keys have been changed to "list-of-dicts".
-  The old data models are still supported in AVD 4.x.x, but support will be removed in AVD 5.0.0.
+- In AVD version 5.0.0, the support for old "dict-of-dicts" data models with user-defined keys will be removed.
   See details on how to migrate to the new data models in the [Porting guide for AVD 4.x.x](../porting-guides/4.x.x.md#data-model-changes-from-dict-of-dicts-to-list-of-dicts).
 
 ## Release 4.9.0
