--- a/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
@@ -10,13 +10,15 @@ title: Release Notes for AVD 4.x.x
 
 # Release Notes for AVD 4.x.x
 
-- Documentation for AVD version `4.x.x` [available here](https://www.avd.sh/en/stable/)
+- Documentation for AVD version `4.x.x` [available here](https://avd.arista.com/stable/)
 
 ## Release 4.10.0
 
 ### Deprecations
 
 - In AVD version 5.0.0, the `eos_designs.jsonschema.json` and `eos_cli_config_gen.jsonschema.json` will no longer be generated. These schemas are not being used and have never been complete.
+- In AVD version 5.0.0, the support for old "dict-of-dicts" data models with user-defined keys will be removed.
+  See details on how to migrate to the new data models in the [Porting guide for AVD 4.x.x](../porting-guides/4.x.x.md#data-model-changes-from-dict-of-dicts-to-list-of-dicts).
 
 ## Release 4.9.0
 
@@ -978,7 +980,7 @@ to:
 
 ```yaml
 ethernet_interfaces:
-  - name: Ethernet1:   # <-- "name" here is called the "primary_key" which must have a unique value across all list elements
+  - name: Ethernet1   # <-- "name" here is called the "primary_key" which must have a unique value across all list elements
     <...>
 ```
 
