--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -14,8 +14,8 @@ Major releases of AVD can contain breaking changes. This porting guide addresses
 and playbooks to be compatible with new default behaviors and changed data models when upgrading from AVD 4.x versions.
 
 !!! note
-    Upgrading from AVD version 3.x be done via first upgrading to 4.x using the [Porting Guide for Ansible AVD 4.x.x](4.x.x.md)
-    and then upgrading to 5.x with this guide.
+    To upgrade from AVD version 3.x, first upgrade to AVD 4.10 using the [Porting Guide for Ansible AVD 4.x.x](https://avd.arista.com/4.10/docs/porting-guides/4.x.x.html)
+    and then upgrade to 5.x with this guide.
 
 Users of `eos_designs` do not have to consider the changes in `eos_cli_config_gen`, since those adaptions are
 built into `eos_designs`.
