--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -16,7 +16,7 @@ title: Release Notes for AVD 5.x.x
 
 ### Changes to requirements
 
-TODO
+- AVD v.5.0.0 requires Python version 3.10 or newer.
 
 ### Data model changes from "dict-of-dicts" to "list-of-dicts"
 
