--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -82,6 +82,6 @@ The following data model keys have been removed from `eos_cli_config_gen` in v5.
 | old key 10.1(router_isis) | new key(TODO) |
 | old key 10.2(router_isis) | new key(TODO) |
 | old key 11(snmp_server) | new key(TODO) |
-| old key 12(stun) | new key(TODO) |
+| stun.server.local_interface | stun.server.local_interfaces |
 | old key 13.1(vlan_interfaces) | new key(TODO) |
 | old key 13.2(vlan_interfaces) | new key(TODO) |
