--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -68,7 +68,7 @@ The following data model keys have been removed from `eos_cli_config_gen` in v5.
 | old key 3(flow_trackings) | new key(TODO) |
 | old key 4.1(management_api_gnmi) | new key(TODO) |
 | old key 4.2(management_api_gnmi) | new key(TODO) |
-| old key 5(management_security) | new key(TODO) |
+| management_security.entropy_source | management_security.entropy_sources |
 | old key 6(name_server) | new key(TODO) |
 | old key 7.1(port_channel_interfaces) | new key(TODO) |
 | old key 7.2(port_channel_interfaces) | new key(TODO) |
