--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -79,8 +79,8 @@ The following data model keys have been removed from `eos_cli_config_gen` in v5.
 | old key 9.4(router_bgp) | new key(TODO) |
 | old key 9.5(router_bgp) | new key(TODO) |
 | old key 9.6(router_bgp) | new key(TODO) |
-| old key 10.1(router_isis) | new key(TODO) |
-| old key 10.2(router_isis) | new key(TODO) |
+| router_isis.address_family | router_isis.address_family_ipv4.enabled or router_isis.address_family_ipv6.enabled |
+| router_isis.isis_af_defaults | router_isis.address_family_ipv4 or router_isis.address_family_ipv6 |
 | snmp_server.views.MIB_family_name | snmp_server.views.mib_family_name |
 | stun.server.local_interface | stun.server.local_interfaces |
 | old key 13.1(vlan_interfaces) | new key(TODO) |
