adding in porting-guides

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -61,7 +61,7 @@ The following data model keys have been removed from `eos_cli_config_gen` in v5.
 
 | Removed key | New key |
 | ----------- | ------- |
-| old key 1(daemon_terminattr) | new key(TODO) |
+| cvcompression | - |
 | event_handlers.action | event_handlers.actions.bash_command |
 | event_handlers.action_type | event_handlers.actions |
 | event_handlers.regex | event_handlers.trigger_on_logging.regex |
