Doc: Re-run molecule && address TODOs

--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -43,10 +43,12 @@ TODO: add level4 sections for breaking changes outlining the change and referrin
 
 ### Breaking or behavioral changes in eos_validate_state
 
-Starting AVD 5.0.0, `eos_validate_state` uses ANTA as backend, which will change the default behavior (same as setting `use_anta: true` in older versions).
-If you have not been using `use_anta: true` in latest versions of AVD 4.x.x, you should expect faster execution, and if not please report on the GitHub [discussions board](https://github.com/aristanetworks/avd/discussions)
+Starting AVD 5.0.0, `eos_validate_state` uses ANTA as backend, which will change the default behavior (same as setting `use_anta: true` in the latest AVD 4.x.x versions).
+If you have not been using `use_anta: true` in latest versions of AVD 4.x.x, please go through the following sections for details on the changes.
 
-Breaking changes may require modifications to the inventory or playbook. See the [Porting guide for AVD 5.x.x](../porting-guides/5.x.x.md)
+Please report any issues on the GitHub [discussions board](https://github.com/aristanetworks/avd/discussions).
+
+Breaking changes may require modifications to the inventory, input variables or playbooks. See the [Porting guide for AVD 5.x.x](../porting-guides/5.x.x.md)
 for details.
 
 #### Loose mode to ignore playbook error is no longer supported
@@ -55,15 +57,11 @@ No porting guide entry.
 
 #### Input for hardware tests have been updated
 
-The inputs for the hardware test have changed
-
-TODO - porting guide
+The inputs for the hardware test have changed. [Porting guide for AVD 5.x.x](../porting-guides/5.x.x.md#input-for-hardware-tests-have-been-updated)
 
 #### Filtering tests using Ansible tags support was removed
 
-Instead use `skipped_tests`.
-
-TODO - porting guide
+Instead use the `skip_tests` mechanism. [Porting guide for AVD 5.x.x](../porting-guides/5.x.x.md#filtering-tests-using-ansible-tags-support-was-removed)
 
 #### Changes to CSV and Markdown reports
 
