Cut: Remove deprecated Ansible plugins

--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -18,6 +18,26 @@ title: Release Notes for AVD 5.x.x
 
 - AVD v.5.0.0 requires Python version 3.10 or newer.
 
+### Removal of Ansible plugins
+
+The following ansible plugins have been removed from the `arista.avd` Ansible collection in v5.0.0.
+
+Filters:
+
+- `arista.avd.hash_passphrase`
+- `arista.avd.generate_esi`
+- `arista.avd.generate_lacp_id`
+- `arista.avd.generate_route_target`
+
+Action plugins / Modules:
+
+- `arista.avd.deploy_to_cv`
+- `arista.avd.batch_template`
+- `arista.avd.validate_and_template`
+- `arista.avd.yaml_templates_to_facts`
+
+See the [porting guide](../porting-guides/5.x.x.md#removal-of-ansible-plugins) for details.
+
 ### Data model changes from "dict-of-dicts" to "list-of-dicts"
 
 TODO: Removed type conversion
