--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -65,7 +65,7 @@ The following data model keys have been removed from `eos_cli_config_gen` in v5.
 | event_handlers.action | event_handlers.actions.bash_command |
 | event_handlers.action_type | event_handlers.actions |
 | event_handlers.regex | event_handlers.trigger_on_logging.regex |
-| old key 3(flow_trackings) | new key(TODO) |
+| flow_trackings | flow_tracking |
 | old key 4.1(management_api_gnmi) | new key(TODO) |
 | old key 4.2(management_api_gnmi) | new key(TODO) |
 | management_security.entropy_source | management_security.entropy_sources |
