removed deprecated keys from port-channel-interfaces data model

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -78,8 +78,8 @@ The following data model keys have been removed from `eos_cli_config_gen` in v5.
 | management_api_gnmi.octa | management_api_gnmi.provider |
 | management_security.entropy_source | management_security.entropy_sources |
 | name_server | ip_name_servers |
-| old key 7.1(port_channel_interfaces) | new key(TODO) |
-| old key 7.2(port_channel_interfaces) | new key(TODO) |
+| port_channel_interfaces.esi | port_channel_interfaces.evpn_ethernet_segment.identifier |
+| port_channel_interfaces.rt | port_channel_interfaces.evpn_ethernet_segment.route_target |
 | radius_servers | radius_server.hosts |
 | router_bgp.peer_groups[].peer_filter | router_bgp.listen_ranges[].peer_filter |
 | router_bgp.peer_groups[].bgp_listen_range_prefix | router_bgp.listen_ranges[].prefix |
