Doc: Add release-notes information

--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -34,12 +34,20 @@ for details.
 
 TODO: add level4 sections for breaking changes outlining the change and referring to porting guide for migration.
 
+#### Removal of schema in JSON format
+
+The `eos_cli_config_gen.jsonschema.json` is no longer generated. This schema was not being used and had never been complete.
+
 ### Breaking or behavioral changes in eos_designs
 
 Breaking changes may require modifications to the inventory or playbook. See the [Porting guide for AVD 5.x.x](../porting-guides/5.x.x.md)
 for details.
 
 TODO: add level4 sections for breaking changes outlining the change and referring to porting guide for migration.
+
+#### Removal of schema in JSON format
+
+The `eos_designs.jsonschema.json` is no longer generated. This schema was not being used and had never been complete.
 
 ### Other breaking or behavioral changes
 
