--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -66,8 +66,8 @@ The following data model keys have been removed from `eos_cli_config_gen` in v5.
 | event_handlers.action_type | event_handlers.actions |
 | event_handlers.regex | event_handlers.trigger_on_logging.regex |
 | flow_trackings | flow_tracking |
-| enable_vrfs | transport.grpc |
-| octa | provider |
+| management_api_gnmi.enable_vrfs | management_api_gnmi.transport.grpc |
+| management_api_gnmi.octa | management_api_gnmi.provider |
 | management_security.entropy_source | management_security.entropy_sources |
 | old key 6(name_server) | new key(TODO) |
 | old key 7.1(port_channel_interfaces) | new key(TODO) |
