--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -80,7 +80,7 @@ The following data model keys have been removed from `eos_cli_config_gen` in v5.
 | old key 6(name_server) | new key(TODO) |
 | old key 7.1(port_channel_interfaces) | new key(TODO) |
 | old key 7.2(port_channel_interfaces) | new key(TODO) |
-| old key 8(radius_servers) | new key(TODO) |
+| radius_servers | radius_server |
 | old key 9.1(router_bgp) | new key(TODO) |
 | old key 9.2(router_bgp) | new key(TODO) |
 | old key 9.3(router_bgp) | new key(TODO) |
