Doc: Add porting guide & release notes

--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -121,6 +121,14 @@ With AVD version 5.0.0 `ipv6_address_virtuals` are only rendered in the configur
 
 The `eos_designs.jsonschema.json` is no longer generated. This schema was not being used and had never been complete.
 
+#### AvdInterfaceDescriptions breaking changes
+
+The class `AvdInterfaceDescriptions` was heavily modified and users having
+subclassed it for custom descriptions need to adjust their code. The updated
+version gives more flexibility to customizing interface descriptions.
+
+See the [Porting guide for AVD 5.x.x](../porting-guides/5.x.x.md#avdinterfacedescriptions-breaking-changes)
+
 ### Other breaking or behavioral changes
 
 Breaking changes may require modifications to the inventory or playbook. See the [Porting guide for AVD 5.x.x](../porting-guides/5.x.x.md)
