Apply suggestions from code review
Co-authored-by: Claus Holbech <holbech@arista.com>

--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -72,11 +72,11 @@ No porting guide entry.
 
 #### Input for hardware tests have been updated
 
-The inputs for the hardware test have changed. [Porting guide for AVD 5.x.x](../porting-guides/5.x.x.md#input-for-hardware-tests-have-been-updated)
+The inputs for the hardware test have changed. See the [porting guide](../porting-guides/5.x.x.md#input-for-hardware-tests-have-been-updated) for details.
 
 #### Filtering tests using Ansible tags support was removed
 
-Instead use the `skip_tests` mechanism. [Porting guide for AVD 5.x.x](../porting-guides/5.x.x.md#filtering-tests-using-ansible-tags-support-was-removed)
+Instead use the `skip_tests` mechanism. See the [porting guide](../porting-guides/5.x.x.md#filtering-tests-using-ansible-tags-support-was-removed) for details.
 
 #### Changes to CSV and Markdown reports
 
@@ -85,8 +85,6 @@ Instead use the `skip_tests` mechanism. [Porting guide for AVD 5.x.x](../porting
 - Test categories, descriptions and inputs have been improved to follow ANTA.
 - CSV report headers updated from `test_id,node,test_category,test_description,test,result,failure_reason` to `id,dut,categories,test,description,inputs,result,messages`
 - Tests skipped by ANTA will be marked as `SKIPPED` in the final reports.
-
-No porting guide entry.
 
 #### Undeployed devices
 
@@ -100,7 +98,7 @@ No porting guide entry.
 - BGP tests will only run if `service_routing_protocols_model` is set to `multi-agent` in the structured configuration file.
 
 !!! note
-    Starting from version 4.30.1F, `service_routing_protocols_model` is preset to `multi-agent` by default on EOS devices.
+    Starting from version 4.30.1F, `service_routing_protocols_model` is set to `multi-agent` by default on EOS devices.
 
 #### Inband management reachability test change
 
