Apply suggestions from code review

--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -66,9 +66,13 @@ Please report any issues on the GitHub [discussions board](https://github.com/ar
 Breaking changes may require modifications to the inventory, input variables or playbooks. See the [Porting guide for AVD 5.x.x](../porting-guides/5.x.x.md)
 for details.
 
-#### Loose mode to ignore playbook error is no longer supported
+#### Loose mode is the only supported mode
 
-No porting guide entry.
+In the previous implementation, loose mode was used by default to avoid stopping the playbook and hence the tests when they were run task by task in Ansible. It was possible to turn loose mode off with a variable that would make the playbook stop at the first failing tasks for whatever reason on each host.
+
+Loose mode is now the default and all the tests are always run and the errors are all present in the final report.
+
+- No porting guide entry.
 
 #### Input for hardware tests have been updated
 
