Doc: Adjust release notes and porting guide

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -40,6 +40,7 @@ The following ansible plugins have been removed from the `arista.avd` Ansible co
 | Action plugin/Module | `arista.avd.batch_template` | The internal `arista.avd.batch_template` action plugin is no longer used by AVD. The plugin is released as open source, so it can be copied and reused according to the license and copyright. |
 | Action plugin/Module | `arista.avd.validate_and_template` | The internal `arista.avd.validate_and_template` action plugin is no longer used by AVD. The plugin is released as open source, so it can be copied and reused according to the license and copyright. |
 | Action plugin/Module | `arista.avd.yaml_templates_to_facts` | The internal `arista.avd.yaml_templates_to_facts` action plugin is no longer used by AVD. The plugin is released as open source, so it can be copied and reused according to the license and copyright. |
+| Action plugin/Module | `arista.avd._emit_warning` | The internal `arista.avd._emit_warning` action plugin is no longer used by AVD. The plugin is released as open source, so it can be copied and reused according to the license and copyright. |
 
 ## Changes to role arista.avd.eos_designs
 
