--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -35,6 +35,7 @@ Action plugins / Modules:
 - `arista.avd.batch_template`
 - `arista.avd.validate_and_template`
 - `arista.avd.yaml_templates_to_facts`
+- `arista.avd._emit_warning
 
 See the [porting guide](../porting-guides/5.x.x.md#removal-of-ansible-plugins) for details.
 
