--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -73,12 +73,12 @@ The following data model keys have been removed from `eos_cli_config_gen` in v5.
 | old key 7.1(port_channel_interfaces) | new key(TODO) |
 | old key 7.2(port_channel_interfaces) | new key(TODO) |
 | old key 8(radius_servers) | new key(TODO) |
-| old key 9.1(router_bgp) | new key(TODO) |
-| old key 9.2(router_bgp) | new key(TODO) |
-| old key 9.3(router_bgp) | new key(TODO) |
-| old key 9.4(router_bgp) | new key(TODO) |
-| old key 9.5(router_bgp) | new key(TODO) |
-| old key 9.6(router_bgp) | new key(TODO) |
+| router_bgp.peer_groups[].peer_filter | router_bgp.listen_ranges[].peer_filter |
+| router_bgp.peer_groups[].bgp_listen_range_prefix | router_bgp.listen_ranges[].prefix |
+| router_bgp.address_family_ipv4.peer_groups[].next_hop.address_family_ipv6_originate | router_bgp.address_family_ipv4.peer_groups[].next_hop.address_family_ipv6 |
+| router_bgp.vrfs[].neighbors[].prefix_list_in | router_bgp.vrfs[].address_family_ipv4.neighbors[].prefix_list_in or router_bgp.vrfs[].address_family_ipv6.neighbors[].prefix_list_in |
+| router_bgp.vrfs[].neighbors[].prefix_list_in | router_bgp.vrfs[].address_family_ipv4.neighbors[].prefix_list_out or router_bgp.vrfs[].address_family_ipv6.neighbors[].prefix_list_out |
+| router_bgp.vrfs[].address_families | router_bgp.vrfs[].address_family_* |
 | old key 10.1(router_isis) | new key(TODO) |
 | old key 10.2(router_isis) | new key(TODO) |
 | snmp_server.views.MIB_family_name | snmp_server.views.mib_family_name |
