Cut: Remove deprecated Ansible plugins (#4291)
Co-authored-by: Guillaume Mulocher <gmulocher@arista.com>

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -32,7 +32,15 @@ The following ansible plugins have been removed from the `arista.avd` Ansible co
 
 | Plugin type | Plugin name | Replacement |
 | ----------- | ----------- | ----------- |
-| TODO: list out the removed plugins and replacements (take from deprecation docs) | | |
+| Filter | `arista.avd.hash_passphrase` | Use `arista.avd.snmp_hash` instead |
+| Filter | `arista.avd.generate_esi` | Use Jinja string concatenation instead like `{{ <esi_prefix> ~ <short_esi> }}` |
+| Filter | `arista.avd.generate_lacp_id` | Use the builtin `replace` filter instead like `{{ <short_esi> \| replace(':', '.') }}` |
+| Filter | `arista.avd.generate_route_target` | Use the builtin `ansible.builtin.regex_replace` filter instead like `{{ <short_esi> \| ansible.builtin.regex_replace('(\\d{2})(\\d{2}):(\\d{2})(\\d{2}):(\\d{2})(\\d{2})', '\\1:\\2:\\3:\\4:\\5:\\6') }}` |
+| Action plugin/Module | `arista.avd.deploy_to_cv` | Use `arista.avd.cv_workflow` instead |
+| Action plugin/Module | `arista.avd.batch_template` | The internal `arista.avd.batch_template` action plugin is no longer used by AVD. The plugin is released as open source, so it can be copied and reused according to the license and copyright. |
+| Action plugin/Module | `arista.avd.validate_and_template` | The internal `arista.avd.validate_and_template` action plugin is no longer used by AVD. The plugin is released as open source, so it can be copied and reused according to the license and copyright. |
+| Action plugin/Module | `arista.avd.yaml_templates_to_facts` | The internal `arista.avd.yaml_templates_to_facts` action plugin is no longer used by AVD. The plugin is released as open source, so it can be copied and reused according to the license and copyright. |
+| Action plugin/Module | `arista.avd._emit_warning` | The internal `arista.avd._emit_warning` action plugin is no longer used by AVD. The plugin is released as open source, so it can be copied and reused according to the license and copyright. |
 
 ## Changes to role arista.avd.eos_designs
 
