Refactor(eos_validate_state): Keep only ANTA mode in eos_validate_state (#4286)

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -94,3 +94,60 @@ The following data model keys have been removed from `eos_cli_config_gen` in v5.
 | vlan_interfaces[].ipv6_address_virtual | vlan_interfaces[].ipv6_address_virtuals |
 | vlan_interfaces[].ipv6_virtual_router_address | vlan_interfaces[].ipv6_virtual_router_addresses |
 | vlan_interfaces[].vrrp | vlan_interfaces[].vrrp_ids |
+
+## Changes to role `arista.avd.eos_validate_state`
+
+### Input for hardware tests have been updated
+
+The inputs for the hardware test have changed.
+
+```yaml
+validation_role:
+  xcvr_own_manufacturers:
+    - Manufacturer 1
+    - Manufacturer 2
+  pwr_supply_states:
+     - ok
+     - notInserted
+  fan_states:
+     - ok
+     - notInserted
+```
+
+should be replaced with:
+
+```yaml
+accepted_xcvr_manufacturers:
+  - Manufacturer 1
+  - Manufacturer 2
+accepted_pwr_supply_states:
+  - ok
+  - notInserted
+accepted_fan_states:
+  - ok
+  - notInserted
+```
+
+### Filtering tests using Ansible tags support was removed
+
+The filtering of tests using Ansible tags has been removed, The `skip_tests` variable should be used instead. The `skip_tests` mechanism is much more granular and allow to filter at the test level.
+
+```bash
+ansible-playbook playbooks/fabric-validate.yaml --skip-tags ntp,bgp_checks
+```
+
+should be replaced with the following input variables:
+
+```yaml
+skip_tests:
+ - category: AvdTestNTP
+ - category: AvdTestBGP
+```
+
+and the following command line:
+
+```bash
+ansible-playbook playbooks/fabric-validate.yaml
+```
+
+The test categories are listed in the [role documentation](../../roles/eos_validate_state/README.md#test-categories)
