Cut(eos_cli_config_gen): Remove deprecated keys enable_vrfs and octa  from management_api_gnmi data model (#4296)
Co-authored-by: Guillaume Mulocher <gmulocher@arista.com>

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -74,8 +74,8 @@ The following data model keys have been removed from `eos_cli_config_gen` in v5.
 | event_handlers.action_type | event_handlers.actions |
 | event_handlers.regex | event_handlers.trigger_on_logging.regex |
 | flow_trackings | flow_tracking |
-| old key 4.1(management_api_gnmi) | new key(TODO) |
-| old key 4.2(management_api_gnmi) | new key(TODO) |
+| management_api_gnmi.enable_vrfs | management_api_gnmi.transport.grpc |
+| management_api_gnmi.octa | management_api_gnmi.provider |
 | management_security.entropy_source | management_security.entropy_sources |
 | name_server | ip_name_servers |
 | old key 7.1(port_channel_interfaces) | new key(TODO) |
