Cut(eos_cli_config_gen): Remove deprecated data model radius_servers (#4295)
Co-authored-by: Laxmikant Chintakindi <laxmikant.c-ext@Laxmikants-MacBook-Pro.local>
Co-authored-by: gmuloc <gmulocher@arista.com>

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -80,7 +80,7 @@ The following data model keys have been removed from `eos_cli_config_gen` in v5.
 | name_server | ip_name_servers |
 | old key 7.1(port_channel_interfaces) | new key(TODO) |
 | old key 7.2(port_channel_interfaces) | new key(TODO) |
-| old key 8(radius_servers) | new key(TODO) |
+| radius_servers | radius_server.hosts |
 | router_bgp.peer_groups[].peer_filter | router_bgp.listen_ranges[].peer_filter |
 | router_bgp.peer_groups[].bgp_listen_range_prefix | router_bgp.listen_ranges[].prefix |
 | router_bgp.address_family_ipv4.peer_groups[].next_hop.address_family_ipv6_originate | router_bgp.address_family_ipv4.peer_groups[].next_hop.address_family_ipv6 |
