--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -56,7 +56,7 @@ The following data model keys have been removed from `eos_designs` in v5.0.0.
 | old key 2(defs_adapter_config) | new key(TODO) |
 | old key 3.1(defs_node_type) | new key(TODO) |
 | old key 3.2(defs_node_type) | new key(TODO) |
-| old key 4(defs_svi_settings) | new key(TODO) |
+| svi_settings.ipv6_address_virtual | svi_settings.ipv6_address_virtuals |
 | old key 5(ptp) | new key(TODO) |
 
 ## Changes to role `arista.avd.eos_cli_config_gen`
