removed reprecated keys from node-type schema

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -54,8 +54,8 @@ The following data model keys have been removed from `eos_designs` in v5.0.0.
 | ----------- | ------- |
 | old key 1(cvp_instance_ip) | new key(TODO) |
 | old key 2(defs_adapter_config) | new key(TODO) |
-| old key 3.1(defs_node_type) | new key(TODO) |
-| old key 3.2(defs_node_type) | new key(TODO) |
+| node_type.defaults.inband_management_subnet | node_type.defaults.inband_mgmt_subnet |
+| node_type.defaults.inband_management_vlan | node_type.defaults.inband_mgmt_vlan |
 | old key 4(defs_svi_settings) | new key(TODO) |
 | old key 5(ptp) | new key(TODO) |
 
@@ -74,19 +74,19 @@ The following data model keys have been removed from `eos_cli_config_gen` in v5.
 | event_handlers.action_type | event_handlers.actions |
 | event_handlers.regex | event_handlers.trigger_on_logging.regex |
 | flow_trackings | flow_tracking |
-| management_api_gnmi.enable_vrfs | management_api_gnmi.transport.grpc |
-| management_api_gnmi.octa | management_api_gnmi.provider |
+| old key 4.1(management_api_gnmi) | new key(TODO) |
+| old key 4.2(management_api_gnmi) | new key(TODO) |
 | management_security.entropy_source | management_security.entropy_sources |
-| name_server | ip_name_servers |
-| port_channel_interfaces.esi | port_channel_interfaces.evpn_ethernet_segment.identifier |
-| port_channel_interfaces.rt | port_channel_interfaces.evpn_ethernet_segment.route_target |
-| radius_servers | radius_server.hosts |
-| router_bgp.peer_groups[].peer_filter | router_bgp.listen_ranges[].peer_filter |
-| router_bgp.peer_groups[].bgp_listen_range_prefix | router_bgp.listen_ranges[].prefix |
-| router_bgp.address_family_ipv4.peer_groups[].next_hop.address_family_ipv6_originate | router_bgp.address_family_ipv4.peer_groups[].next_hop.address_family_ipv6 |
-| router_bgp.vrfs[].neighbors[].prefix_list_in | router_bgp.vrfs[].address_family_ipv4.neighbors[].prefix_list_in or router_bgp.vrfs[].address_family_ipv6.neighbors[].prefix_list_in |
-| router_bgp.vrfs[].neighbors[].prefix_list_in | router_bgp.vrfs[].address_family_ipv4.neighbors[].prefix_list_out or router_bgp.vrfs[].address_family_ipv6.neighbors[].prefix_list_out |
-| router_bgp.vrfs[].address_families | router_bgp.vrfs[].address_family_* |
+| old key 6(name_server) | new key(TODO) |
+| old key 7.1(port_channel_interfaces) | new key(TODO) |
+| old key 7.2(port_channel_interfaces) | new key(TODO) |
+| old key 8(radius_servers) | new key(TODO) |
+| old key 9.1(router_bgp) | new key(TODO) |
+| old key 9.2(router_bgp) | new key(TODO) |
+| old key 9.3(router_bgp) | new key(TODO) |
+| old key 9.4(router_bgp) | new key(TODO) |
+| old key 9.5(router_bgp) | new key(TODO) |
+| old key 9.6(router_bgp) | new key(TODO) |
 | old key 10.1(router_isis) | new key(TODO) |
 | old key 10.2(router_isis) | new key(TODO) |
 | snmp_server.views.MIB_family_name | snmp_server.views.mib_family_name |
@@ -94,60 +94,3 @@ The following data model keys have been removed from `eos_cli_config_gen` in v5.
 | vlan_interfaces[].ipv6_address_virtual | vlan_interfaces[].ipv6_address_virtuals |
 | vlan_interfaces[].ipv6_virtual_router_address | vlan_interfaces[].ipv6_virtual_router_addresses |
 | vlan_interfaces[].vrrp | vlan_interfaces[].vrrp_ids |
-
-## Changes to role `arista.avd.eos_validate_state`
-
-### Input for hardware tests have been updated
-
-The inputs for the hardware test have changed.
-
-```yaml
-validation_role:
-  xcvr_own_manufacturers:
-    - Manufacturer 1
-    - Manufacturer 2
-  pwr_supply_states:
-     - ok
-     - notInserted
-  fan_states:
-     - ok
-     - notInserted
-```
-
-should be replaced with:
-
-```yaml
-accepted_xcvr_manufacturers:
-  - Manufacturer 1
-  - Manufacturer 2
-accepted_pwr_supply_states:
-  - ok
-  - notInserted
-accepted_fan_states:
-  - ok
-  - notInserted
-```
-
-### Filtering tests using Ansible tags support was removed
-
-The filtering of tests using Ansible tags has been removed, The `skip_tests` variable should be used instead. The `skip_tests` mechanism is much more granular and allow to filter at the test level.
-
-```bash
-ansible-playbook playbooks/fabric-validate.yaml --skip-tags ntp,bgp_checks
-```
-
-should be replaced with the following input variables:
-
-```yaml
-skip_tests:
- - category: AvdTestNTP
- - category: AvdTestBGP
-```
-
-and the following command line:
-
-```bash
-ansible-playbook playbooks/fabric-validate.yaml
-```
-
-The test categories are listed in the [role documentation](../../roles/eos_validate_state/README.md#test-categories)
