--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -53,7 +53,7 @@ The following data model keys have been removed from `eos_designs` in v5.0.0.
 | Removed key | New key |
 | ----------- | ------- |
 | old key 1(cvp_instance_ip) | new key(TODO) |
-| old key 2(defs_adapter_config) | new key(TODO) |
+| adapter_config.port_channel.short_esi | adapter_config.port_channel.ethernet_segment.short_esi |
 | old key 3.1(defs_node_type) | new key(TODO) |
 | old key 3.2(defs_node_type) | new key(TODO) |
 | old key 4(defs_svi_settings) | new key(TODO) |
