--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -87,8 +87,8 @@ The following data model keys have been removed from `eos_cli_config_gen` in v5.
 | router_bgp.vrfs[].neighbors[].prefix_list_in | router_bgp.vrfs[].address_family_ipv4.neighbors[].prefix_list_in or router_bgp.vrfs[].address_family_ipv6.neighbors[].prefix_list_in |
 | router_bgp.vrfs[].neighbors[].prefix_list_in | router_bgp.vrfs[].address_family_ipv4.neighbors[].prefix_list_out or router_bgp.vrfs[].address_family_ipv6.neighbors[].prefix_list_out |
 | router_bgp.vrfs[].address_families | router_bgp.vrfs[].address_family_* |
-| old key 10.1(router_isis) | new key(TODO) |
-| old key 10.2(router_isis) | new key(TODO) |
+| router_isis.address_family | router_isis.address_family_ipv4.enabled or router_isis.address_family_ipv6.enabled |
+| router_isis.isis_af_defaults | router_isis.address_family_ipv4 or router_isis.address_family_ipv6 |
 | snmp_server.views.MIB_family_name | snmp_server.views.mib_family_name |
 | stun.server.local_interface | stun.server.local_interfaces |
 | vlan_interfaces[].ipv6_address_virtual | vlan_interfaces[].ipv6_address_virtuals |
