--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -41,7 +41,12 @@ See the [porting guide](../porting-guides/5.x.x.md#removal-of-ansible-plugins) f
 
 ### Data model changes from "dict-of-dicts" to "list-of-dicts"
 
-TODO: Removed type conversion
+In AVD 4.0.0 and across both `eos_designs` and `eos_cli_config_gen`, *all* "dict-of-dicts" data models with user-defined keys were changed to "list-of-dicts".
+In AVD 4.x inputs were auto-converted to the new data models.
+
+As of AVD 5.0.0 the automatic conversion from dict-of-dicts has been removed, so it is required to update the input data to the new data models.
+
+See the [porting guide](../porting-guides/5.x.x.md#data-model-changes-from-dict-of-dicts-to-list-of-dicts) for details.
 
 ### All eos_designs and eos_cli_config_gen variables are always validated by schemas
 
@@ -54,6 +59,15 @@ Breaking changes may require modifications to the inventory or playbook. See the
 for details.
 
 TODO: add level4 sections for breaking changes outlining the change and referring to porting guide for migration.
+
+#### No auto-conversion of old data model for `router_bgp.redistribute_routes` and `router_bgp.vrfs[].redistribute_routes`
+
+The data models for `router_bgp.redistribute_routes` and `router_bgp.vrfs[].redistribute_routes` previously supported either a list of strings or a dict-of-dicts.
+In 4.0.0 this was changed to a list-of-dicts with automatic conversion from any of the previous models into the new model.
+
+As of AVD 5.0.0 the automatic conversion from both of the previous models has been removed, so it is required to update the input data to the new data models.
+
+See the [porting guide](../porting-guides/5.x.x.md#no-auto-conversion-of-old-data-model-for-router_bgpredistribute_routes-and-router_bgpvrfsredistribute_routes) for details.
 
 #### Removal of schema in JSON format
 
