--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -60,7 +60,7 @@ The following data model keys have been removed from `eos_designs` in v5.0.0.
 | old key 3.2(defs_node_type) | new key(TODO) |
 | <network_services_key>[].vrfs[].svis[].ipv6_address_virtual | <network_services_key>[].vrfs[].svis[].ipv6_address_virtuals |
 | svi_profiles[].ipv6_address_virtual | svi_profiles[].ipv6_address_virtuals |
-| old key 5(ptp) | new key(TODO) |
+| ptp | ptp_settings |
 
 ## Changes to role `arista.avd.eos_cli_config_gen`
 
