updated the porting guide

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -54,8 +54,14 @@ The following data model keys have been removed from `eos_designs` in v5.0.0.
 | ----------- | ------- |
 | cvp_instance_ip | cvp_instance_ips |
 | old key 2(defs_adapter_config) | new key(TODO) |
-| node_type.defaults.inband_management_subnet | node_type.defaults.inband_mgmt_subnet |
-| node_type.defaults.inband_management_vlan | node_type.defaults.inband_mgmt_vlan |
+| <node_type_key>.defaults.inband_management_subnet | <node_type_key>.defaults.inband_mgmt_subnet |
+| <node_type_key>.defaults.inband_management_vlan | <node_type_key>.defaults.inband_mgmt_vlan |
+| <node_type_key>[].node_groups[].nodes[].inband_management_subnet | <node_type_key>[].node_groups[].nodes[].inband_mgmt_subnet |
+| <node_type_key>[].node_groups[].nodes[].inband_management_vlan | <node_type_key>[].node_groups[].nodes[].inband_mgmt_vlan |
+| <node_type_key>[].node_groups[].inband_management_subnet | <node_type_key>[].node_groups[].inband_mgmt_subnet |
+| <node_type_key>[].node_groups[].inband_management_vlan | <node_type_key>[].node_groups[].inband_mgmt_vlan |
+| <node_type_key>[].nodes[].inband_management_subnet | <node_type_key>[].nodes[].defaults.inband_mgmt_subnet |
+| <node_type_key>[].nodes[].inband_management_vlan | <node_type_key>[].nodes[].defaults.inband_mgmt_vlan |
 | old key 4(defs_svi_settings) | new key(TODO) |
 | old key 5(ptp) | new key(TODO) |
 
