--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -53,7 +53,9 @@ The following data model keys have been removed from `eos_designs` in v5.0.0.
 | Removed key | New key |
 | ----------- | ------- |
 | cvp_instance_ip | cvp_instance_ips |
-| adapter_config.port_channel.short_esi | adapter_config.port_channel.ethernet_segment.short_esi |
+| <connected_endpoints_key>[].adapters[].port_channel.short_esi | <connected_endpoints_key>[].adapters[].ethernet_segment.short_esi |
+| network_ports[].port_channel.short_esi | network_ports[].ethernet_segment.short_esi |
+| port_profiles[].port_channel.short_esi | port_profiles[].ethernet_segment.short_esi |
 | old key 3.1(defs_node_type) | new key(TODO) |
 | old key 3.2(defs_node_type) | new key(TODO) |
 | old key 4(defs_svi_settings) | new key(TODO) |
