Cut(eos_designs): Remove the deprecated ipv6_address_virtual key from SVI settings (#4314)

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -58,7 +58,8 @@ The following data model keys have been removed from `eos_designs` in v5.0.0.
 | port_profiles[].port_channel.short_esi | port_profiles[].ethernet_segment.short_esi |
 | old key 3.1(defs_node_type) | new key(TODO) |
 | old key 3.2(defs_node_type) | new key(TODO) |
-| old key 4(defs_svi_settings) | new key(TODO) |
+| <network_services_key>[].vrfs[].svis[].ipv6_address_virtual | <network_services_key>[].vrfs[].svis[].ipv6_address_virtuals |
+| svi_profiles[].ipv6_address_virtual | svi_profiles[].ipv6_address_virtuals |
 | old key 5(ptp) | new key(TODO) |
 
 ## Changes to role `arista.avd.eos_cli_config_gen`
