--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -68,7 +68,7 @@ TODO: add level4 sections for breaking changes outlining the change and referrin
 
 #### ipv6_virtual_router_addresses are now configured if ipv6_enable is true on SVIs
 
-For SVIs with `ipv6_virtual_router_addresses` set, AVD versions below 5.0.0 only rendered in the configuration the addresses if `ipv6_address`
+For SVIs with `ipv6_virtual_router_addresses` set, AVD versions below 5.0.0 only rendered the configuration if `ipv6_address`
 was also set on the SVI.
 
 With AVD version 5.0.0 `ipv6_virtual_router_addresses` are rendered in the configuration if either `ipv6_address` or `ipv6_enable: true` is set.
