Remove convert_dicts plugin and clean up related schema tooling

--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -24,6 +24,7 @@ The following ansible plugins have been removed from the `arista.avd` Ansible co
 
 Filters:
 
+- `arista.avd.convert_dicts`
 - `arista.avd.hash_passphrase`
 - `arista.avd.generate_esi`
 - `arista.avd.generate_lacp_id`
@@ -35,7 +36,7 @@ Action plugins / Modules:
 - `arista.avd.batch_template`
 - `arista.avd.validate_and_template`
 - `arista.avd.yaml_templates_to_facts`
-- `arista.avd._emit_warning
+- `arista.avd._emit_warning`
 
 See the [porting guide](../porting-guides/5.x.x.md#removal-of-ansible-plugins) for details.
 
@@ -79,6 +80,27 @@ Breaking changes may require modifications to the inventory or playbook. See the
 for details.
 
 TODO: add level4 sections for breaking changes outlining the change and referring to porting guide for migration.
+
+#### custom_structured_configuration_prefix no longer accepts a string
+
+Starting AVD 5.0.0, `custom_structured_configuration_prefix` only accepts a list of strings.
+Previously it also accepted a string, which was autoconverted to a list.
+
+See the [porting guide](../porting-guides/5.x.x.md#) for details.
+
+#### default_overlay_address_families and overlay_address_families no longer accept a string
+
+Starting AVD 5.0.0, `node_type_keys[].default_overlay_address_families` and `<node_type_key>.defaults.overlay_address_families` only accept a list of strings.
+Previously they also accepted a string, which was autoconverted to a list.
+
+See the [porting guide](../porting-guides/5.x.x.md#) for details.
+
+#### mpls_route_servers no longer accepts a string
+
+Starting AVD 5.0.0, `<node_type_key>.defaults.mpls_route_servers` only accepts a list of strings.
+Previously it also accepted a string, which was autoconverted to a list.
+
+See the [porting guide](../porting-guides/5.x.x.md#) for details.
 
 #### Removal of schema in JSON format
 
